Add favicon, update title and hero subtitle with Rs 500, improve branding

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT Plus Shared Accounts - Affordable AI Access</title>
+    <title>ChatGPT Shared Nepal | Rs 500/mo | Affordable Community Access</title>
+    <link rel="icon" type="image/webp" href="chatgpt.webp">
     <style>
         /* Critical CSS - Inline for instant loading */
         :root {
@@ -102,7 +103,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h1>ChatGPT Plus <span class="accent">Shared Accounts</span></h1>
-                <p>Nepal’s most affordable way to access ChatGPT Plus.  Share one account, split the cost, and enjoy premium AI for less!</p>
+                <p>Nepal’s most affordable way to access ChatGPT Plus for just Rs 500. Share one account, split the cost, and enjoy premium AI for less!</p>
                 <div class="hero-icon">
                     <img src="chatgpt.webp" alt="ChatGPT Plus" style="width: 120px; height: 120px; border-radius: 20px; object-fit: cover;">
                 </div>
